@@ -13,6 +13,10 @@ partman-auto (81) UNRELEASED; urgency=low
     LVM.
   * Call prepare_new_labels() before calling create_new_label().
     Depends: partman-partitioning (>= 62)
+  * Move get_last_free_partition_infos() out of auto_init_disk() in
+    lib/auto-shared.sh.  autopartition has been updated accordingly.
+    Based on a patch by Grégory Oestreicher.
+    Breaks: partman-auto-lvm (<< 29)
 
  -- Jérémy Bobbio <lunar@debian.org>  Fri, 01 Aug 2008 22:49:11 +0000
 
