@@ -9,6 +9,8 @@ partman-auto-lvm (29) UNRELEASED; urgency=low
   * Replace $devfs_pvdevices by $pv_devices in auto_lvm_prepare() and remove
     devfs resolving in autopartition-lvm.
     Depends: partman-auto (>= 81)
+  * Call get_last_free_partition_infos() after auto_init_disk().
+    Depends: partman-auto (>= 81)
 
  -- Jérémy Bobbio <lunar@debian.org>  Sat, 16 Aug 2008 16:03:07 +0000
 
